Updated Boston Housing project, for review 2

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -355,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: All of the graphs with the exception of the second, which has a max_depth = 3, improves the training score as more data points are made available; this learning curve, has relatively high training & testing scores. The first graph with a max_depth = 1 is indicative of high bias (underfitting) because both the training & testing scores are converging but remain low. The graph with a max_depth = 10 shows high variance, therefore overfits the data. The training score is high, while the testing score is low.**"
+    "**Answer: All of the graphs with the exception of the second, which has a max_depth = 3, improves the training score as more data points are made available; this learning curve, has relatively high training & testing scores. The training and testing scores are converging, and if more training data was added the two curves should continue that trend. Although, it is typically better to have more data, there is no gaurantee that the testing score will improve further. The first graph with a max_depth = 1 is indicative of high bias (underfitting) because both the training & testing scores are converging but remain low. The graph with a max_depth = 10 shows high variance, therefore overfits the data. The training score is high, while the testing score is low.**"
    ]
   },
   {
